# consolized-game-boy

./: README.md
3D/: HDMI_hstx_mount.stl  HDMI_wii_jack_holder_bottom_retainer_v2.stl  HDMI_wii_jack_holder_bottom_v2.stl  HDMI_wii_jack_holder_top_v2.stl  dmg_link_mount.stl
MODEL_A/V2/: notes.txt
MODEL_A/V2/firmware/: Use Model B firmware.txt
MODEL_B/COMMON/firmware/: RGB332_MODEL_ONLY_gb_consolizer_model_b_v3_0_0.uf2  RGB332_MODEL_ONLY_gb_consolizer_model_b_v3_0_1.uf2  RGB332_MODEL_ONLY_gb_consolizer_model_b_v3_0_2.uf2  frameblend_test_20231024.uf2  gb_consolizer_model_b.uf2  gb_consolizer_model_b_v2_0_0.uf2  gb_consolizer_model_b_v2_1_0.uf2  gb_consolizer_model_b_v2_1_1.uf2  gb_consolizer_model_b_v2_2_0.uf2  gb_consolizer_model_b_v2_3_0.uf2  gb_consolizer_model_b_v2_3_2.uf2  gb_consolizer_model_b_v2_3_3.uf2  gb_consolizer_model_b_v2_4_0.uf2  gb_consolizer_model_b_v2_4_1.uf2  gb_consolizer_model_b_v2_4_1_nes_controller.uf2  gb_consolizer_model_b_v2_4_2.uf2  gb_consolizer_model_b_v2_4_2_nes_controller.uf2  gb_consolizer_model_b_v2_4_3.uf2  gb_consolizer_model_b_v2_4_3_nes_controller.uf2  notes.txt
docs/: HDMI_BOM_SGB_CART.csv
images/: BOM_GAMEBOY_CONSOLIZER_SGB_v3_2_2023-01-14.csv  BOM_V3_2_SGB_CART_2023-01-14.csv
src/: buildall.cmd  find_picotool.cmd  find_rpi_rp2_drive.cmd
src/gb_dvi/: build.cmd  build_clean.cmd
src/gb_dvi/apps/: CMakeLists.txt
src/gb_dvi/apps/dmg_dvi/: CMakeLists.txt  main.c
src/gb_vga/: CMakeLists.txt  build_clean.cmd  colors.c  colors.h  eeprom.c  eeprom.h  flash_utils.h  gb_vga.c  mario.h  osd.c  osd.h  pico_extras_import.cmake  video_capture.pio
